--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.2.6",
+    "@headlessui/vue": "^1.7.23",
     "@pdf-lib/fontkit": "^1.1.1",
     "@pinia/nuxt": "^0.11.2",
     "bcryptjs": "^3.0.2",
